fix parcial 5 y 8 guia 7 add parcia 7 guia 1

--- a/7-guia/ejercicios-7-extra/ej-extra-8-7.tex
+++ b/7-guia/ejercicios-7-extra/ej-extra-8-7.tex
@@ -78,8 +78,8 @@
         $$
           \begin{array}{rcl}
             f & =                   &
-            (X - (-1 - \frac{\sqrt{3}}{2}i) )
-            (X - (-1 + \frac{\sqrt{3}}{2}i) )
+            (X - (-\frac{1}{2} - \frac{\sqrt{3}}{2}i) )
+            (X - (-\frac{1}{2} + \frac{\sqrt{3}}{2}i) )
             (X - i)^2
             (X + i)^2
             (X - \magenta{a})
@@ -120,12 +120,20 @@
         $$
           \boxed{
             \begin{array}{rcl}
-              \racionales[X] & \to & f = X (X - 2) (X^2 + X + 1) (X^2 + 1)^2                                         \\
-              \reales[X]     & \to & f = X (X - 2) (X^2 + X + 1) (X^2 + 1)^2                                         \\
-              \complejos[X]  & \to & f = X (X-2) (X - (-1 - \frac{\sqrt{3}}{2}i) ) (X - (-1 + \frac{\sqrt{3}}{2}i) )
+              \racionales[X] & \to & f = X (X - 2) (X^2 + X + 1) (X^2 + 1)^2                                                             \\
+              \reales[X]     & \to & f = X (X - 2) (X^2 + X + 1) (X^2 + 1)^2                                                             \\
+              \complejos[X]  & \to & f = X (X-2) (X - (-\frac{1}{2} - \frac{\sqrt{3}}{2}i) ) (X - (-\frac{1}{2} + \frac{\sqrt{3}}{2}i) )
               (X - i)^2 (X + i)^2
             \end{array}
           }
         $$
         Notar que en $\racionales$ y en $\reales$ las factorizaciones son iguales, dado que no hay raíces irracionales.
 \end{enumerate}
+
+% Contribuciones
+\begin{aportes}
+  %% iconos : \github, \instagram, \tiktok, \linkedin
+  %\aporte{url}{nombre icono}
+  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+  \item \aporte{https://github.com/daniTadd}{Dani Tadd \github}
+\end{aportes}
