--- a/7-guia/ejercicios-7-extra/ej-extra-5-7.tex
+++ b/7-guia/ejercicios-7-extra/ej-extra-5-7.tex
@@ -10,23 +10,22 @@ No caer en la \red{\textit{trampilla}$^{\skull}$} de olvidar que para que una ra
 debe ocurrir lo \textit{"obvio"}, $f(-2) = f'(-2) = 0$ y también que $\red{f^{''}(-2) \distinto 0}$. Si olvidamos esto último
 solo probaríamos que la $\mult(-1;f) \geq 2$ y tendríamos el ejercicio mal \red{$\skull$}.\par
 
-
 \textit{Por inducción en $n$: } $q(n): $ "$-2$ es raíz doble de $f_n,\, \paratodo n \en \naturales$"
 
 \textit{\underline{Caso base:}} ¿$q(1)$ es V?\par
 $
   \llave{lcl}{
-    f_1 = X^5 + 3X^4 + 5X^3 + 11X^2 - 20&
-    \flecha{evaluar}[en $-2$]&
-    f_1(-2) = 0\\
+    f_1 = X^5 + 3X^4 + 5X^3 + 11X^2 - 20 &
+    \flecha{evaluar}[en $-2$]            &
+    f_1(-2) = 0                            \\
 
-    f'_1 = 5X^4 + 12X^3 + 15X^2 + 22X&
-    \flecha{evaluar}[en $-2$]&
-    f'_1(-2) = 0\\
+    f'_1 = 5X^4 + 12X^3 + 15X^2 + 22X    &
+    \flecha{evaluar}[en $-2$]            &
+    f'_1(-2) = 0                           \\
 
-    f^{''}_1 = 20X^3 + 36X^2 + 30X + 22&
-    \flecha{evaluar}[en $-2$]&
-    f^{''}_1(-2) = 22 \distinto 0
+    f^{''}_1 = 20X^3 + 36X^2 + 30X + 22  &
+    \flecha{evaluar}[en $-2$]            &
+    f^{''}_1(-2) = -54 \distinto 0
   }
 $
 
@@ -38,7 +37,7 @@ $\therefore \mult(-2; f_1) = 2 \entonces -2$ es raíz doble de $f_1 \entonces q(
 $f_k
   \sii
   \llave{l}{
-    f_k(-2) = 0 \llamada1\\
+    f_k(-2) = 0 \llamada1  \\
     f'_k(-2) = 0 \llamada2 \\
     f''_k(-2) \distinto 0 \llamada3
   }
@@ -47,13 +46,16 @@ $
 QPQ dado $k \en \naturales,\, q(k+1):$ $-2$ es raíz doble de $f_{k+1} \igual{def} (X + 2)^2 f'_k + 3f_k$:\par
 
 \textit{Derivar:}\par
-$
+$$
   \llave{l}{
-  f_{k+1} \igual{def} (X + 2)^2 f'_k + 3f_k\\
-  f'_{k+1}  = 2(X+2)f'_k + (X+2)^2 f^{''}_k + f'_k\\
-  f^{''}_{k+1}  = 2f'_k + (2x+4)f^{''}_k + 2(x+2) f^{''}_k + (x+2)^2 f^{'''}_k + f^{''}_k
+    f_{k+1} \igual{def} (X + 2)^2 f'_k + 3 \cdot f_k \\
+    f'_{k+1}  = 2(X+2)f'_k + (X+2)^2 f^{''}_k + 3\cdot f'_k\\
+  f^{''}_{k+1} =
+  2f'_k + (2X+4)f^{''}_k + 2(X+2) f^{''}_k + (X+2)^2 f^{'''}_k + 3 \cdot f^{''}_k
   }
-$ \medskip
+$$
+
+\medskip
 
 \textit{Evaluar en $-2$:}\par
 $
@@ -72,8 +74,8 @@ $
     f^{''}_{k+1}(-2) \taa{?}{}\distinto 0
      & \sii &
     \llave{l}{
-    {f^{''}_{k+1}(-2) = 2f'_k(-2) +
-    2\cancel{(-2+2)}f^{''}_k(-2) +
+      {f^{''}_{k+1}(-2) = 2f'_k(-2) +
+      2\cancel{(-2+2)}f^{''}_k(-2) +
     2\cancel{(-2+2)} f^{''}_k(-2) } +                  \\
     + \cancel{(-2+2)}^2 f^{'''}_k(-2) +
     f^{''}_k(-2) = 2\ob{f'_k(-2)}{= 0 \llamada2} + \ob{f^{''}_k(-2)}{\distinto 0 \llamada3}
@@ -86,70 +88,11 @@ $\therefore \mult(-2; f_{k+1}) = 2 \entonces -2$ es raíz doble de $f_{k+1} \ent
 
 Como $q(1),\, q(k)$ y $q(k+1)$ resultaron verdaderas, por principio de inducción $q(n)$ también lo es $\paratodo n \en \naturales$.
 
-
-
-
-
-%%=========================================================
-%%=========================================================
-%%=========================================================
-%%=========================================================
-%% Versión original. Borrar si a el autor no tiene nada en contra
-%%=========================================================
-%%=========================================================
-%%=========================================================
-%%=========================================================
-
-
-
-
-
-%Sea $(f_n)_{(n\geq 1)}$ la sucesión de poliniomios en $\reales[X]$ definida como:
-%$f_1 = X^5 + 3X^4 + 5X^3 + 11X^2 - 20$ y $f_{n+1} = (X + 2)^2 f'_n + 3 f_n$, para cada $n \en \naturales$.
-%Probar que -2 es raíz doble de $f_n$ para todo $n \en \naturales$.
-%
-%\separadorCorto
-%
-%Por inducción en n:
-%
-%$q(n)$ = ''-2 es raíz doble de $f_n$'', $\paratodo n \en \naturales$
-%
-%\underline{Caso base} ¿$q(1)$ es V?
-%
-%$f_1 = X^5 + 3X^4 + 5X^3 + 11X^2 - 20$
-%
-%$f'_1 = 5X^4 + 12X^3 + 15X^2 + 22X$
-%
-%$f''_1 = 20X^3 + 36X^2 + 30X + 22$
-%
-%$f_1(-2) = 0$
-%
-%$f'_1(-2) = 0$
-%
-%$f^{''}_1(-2) = -54 \neq 0$
-%
-%$\therefore \mult(-2, f_1) = 2 \entonces -2$ es raíz doble de $f_1 \entonces q(1)$ es V
-%
-%\underline{Paso inductivo} ¿$q(n) \entonces q(n+1)$, $\paratodo n \en \naturales$?
-%
-%HI: -2 es raíz doble de $f_n$
-%
-%QPQ -2 es raíz doble de $f_{n+1} = (X + 2)^2 f'_n + 3f_n$
-%
-%-2 es raíz doble de $f_{n+1} \sii f_{n+1}(-2) = 0 \y f'_{n+1}(-2) = 0 \y f''_{n+1}(-2) \neq 0$
-%
-%$f_{n+1}(-2) = (-2+2)^2f'_n(-2)+3f_n = \ub{0f'n(-2)}{=0} + 3 f_n(-2) = 0$
-%
-%Por HI, se que $f_n(-2) = 0$ pues -2 es raíz múltiple de $f_n \entonces f_{n+1}(-2) = 3f_n(-2) = 3 \cdot 0 = 0 \entonces \mult(-2, f_{n+1}) \geq 1$
-%
-%$f_{n+1}' = \ub{2(X+2)}{=2X+4}f'_n + (X+2)^2 f''_n + f'_n$
-%
-%$f_{n+1}'(-2) = \ub{2\ub{(-2+2)}{=0}f'_n}{=0} + \ub{\ub{(-2+2)}{=0}^2f''_n}{=0} + f'_n = f'_n \ub{=}{HI} 0$ pues se que -2 es raíz doble de $f_n \entonces -2$ es raíz de $f'_n \entonces \mult(-2, f_{n+1}) \geq 2$
-%
-%$f''_{n+1} = 2f'_n + (2x+4)f''_n + 2(x+2) f''_n + (x+2)^2 f'''_n + f''_n$
-%
-%$f''_{n+1}(-2) = 2f'_n(-2) + \ub{(-4+4)}{=0}f''_n(-2) + 2\ub{(-2+2)}{=0} f''_n(-2) + \ub{(-2+2)^2}{=0} f'''n(-2) + f''n(-2) = 2f'_n(-2) + f''_n(-2)$
-%
-%Por HI, $f'_n(-2) = 0$ y $f''_n(-2) \neq 0 \therefore f_{n+1}''(-2) \neq 0 \entonces \mult(-2, f_{n+1}) = 2 \entonces -2$ es raíz doble de $f_{n+1} \entonces (q(n) \entonces q(n+1), \paratodo n \en \naturales)$\\
-%
-%Luego, queda probado que -2 es raíz doble de $f \paratodo n \en \naturales$.\\
+% Contribuciones
+\begin{aportes}
+  %% iconos : \github, \instagram, \tiktok, \linkedin
+  %\aporte{url}{nombre icono}
+  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+  \item \aporte{https://github.com/daniTadd}{Dani Tadd \github}
+  \item \aporte{\neverGonnaGiveYouUp}{No me acuerdo el autor original \youtube}
+\end{aportes}
