--- a/2-guia/ejercicios-2/ej-12-2.tex
+++ b/2-guia/ejercicios-2/ej-12-2.tex
@@ -1,3 +1,91 @@
 \begin{enunciado}{\ejercicio}
-\hacer
+Probar que
+\begin{enumerate}[label=\roman*)]
+	\item $n! \geq 3^{n-1}, \ \forall n \geq 5$
+	\item $3^n - 2^n > n^3, \ \forall n \geq 4$
+	\item $\displaystyle \sum_{i=1}^{n}\frac{3^i}{i!} < 6n - 5, \ \forall n \geq 3$
+\end{enumerate}
 \end{enunciado}
+\begin{enumerate}[label=\roman*)]
+	\item $P(n): n! \geq 3^{n-1}, \ \forall n \geq 5$ \\ \\
+  \underline{Caso Base}, $n = 5$:
+	\begin{align*}
+		&P(5): 5! \geq 3^{5-1} \\
+		&P(5): 120 \geq 81 \implies P(5):V
+	\end{align*}
+	\underline{Paso inductivo.} $Sea n \geq 5$:
+	\begin{enumerate}
+    \item[HI.] $P(n): V$
+    \item[TI.] $P(n+1): (n+1)! \geq 3^n$
+  \end{enumerate}
+ 	Desarrollemos el lado izquierdo de la desigualdad en la TI
+  \begin{align*}
+  	(n+1)! = (n+1)n! \overset{\text{HI}}{\geq} (n+1)3^{n-1} \overset{\text{Aux}}{\geq} 3 \cdot 3^{n-1} = 3^n
+  	\implies P(n+1):V
+  \end{align*}
+  Hemos probado el caso base y el paso inductivo. Entonces $P(n):V,$ $\forall n \geq 5$.
+
+  \paragraph{Auxiliar}{$n \geq 5 \implies n \geq 3 \implies (n+1) \geq 3$}
+
+	\item $P(n): 3^n - 2^n > n^3, \ \forall n \geq 4$ \\ \\
+	\underline{Caso Base}, $n = 4$:
+	\begin{align*}
+		&P(4): 3^4 - 2^4 > 4^3 \\
+		&P(4): 65 > 64 \implies P(5):V
+	\end{align*}
+	\underline{Paso inductivo.} $Sea n \geq 4$:
+	\begin{enumerate}
+    \item[HI.] $P(n): V$
+    \item[TI.] $P(n+1): 3^{n+1} - 2^{n+1} > (n+1)^3$
+  \end{enumerate}
+ 	Desarrollemos el lado izquierdo de la desigualdad en la TI
+  \begin{align*}
+  	3^{n+1} - 2^{n+1} = 3 \cdot 3^n - 2 \cdot 2^n \geq 3 \cdot 3^n - 3 \cdot 2^n = 3(3^n - 2^n) 
+  	\overset{\text{HI}}{>} 3n^3 \overset{\text{Aux}}{>} (n+1)^3 \implies P(n+1):V
+  \end{align*}
+  Hemos probado el caso base y el paso inductivo. Entonces $P(n):V,$ $\forall n \geq 4$.
+
+	\paragraph{Auxiliar}{$3n^3 > (n+1)^3 \iff \sqrt[3]{(3n^3)} > \sqrt[3]{(n+1)^3} \overset{\text{Aux}}{\iff} 
+	\sqrt[3]{3}n > n+1 \overset{\text{*}}{\iff} \\ 
+	\overset{\text{*}}{\iff} \sqrt[3]{3}n - n > 1 \iff n(\sqrt[3]{3}-1) > 1 \iff n > \frac{1}{\sqrt[3]{3}-1} \simeq 2.3 
+	\implies 3n^3 > (n+1)^3, \ \forall n \geq 4$}
+
+	\item $P(n):\displaystyle \sum_{i=1}^{n}\frac{3^i}{i!} < 6n - 5, \ \forall n \geq 3$ \\ \\
+	\underline{Caso Base}, $n = 3$:
+	\begin{align*}
+		&P(3): \sum_{i=1}^{3}\frac{3^i}{i!} < 6 \cdot 3 - 5 \\
+		&P(4): \frac{3^1}{1!} + \frac{3^2}{2!} + \frac{3^3}{3!} > 13 \\
+		&P(4): 12 < 13 \implies P(5):V
+	\end{align*}
+	\underline{Paso inductivo.} Sea $n \geq 3$:
+	\begin{enumerate}
+    \item[HI.] $P(n): V$
+    \item[TI.] $\displaystyle \sum_{i=1}^{n+1}\frac{3^i}{i!} < 6(n+1) - 5$
+  \end{enumerate}
+ 	Desarrollemos el lado izquierdo de la desigualdad en la TI
+  \begin{align*}
+    &\sum_{i=1}^{n+1}\frac{3^i}{i!} = \frac{3^{n+1}}{(n+1)!} + \sum_{i=1}^{n} \frac{3^i}{i!} 
+  	\overset{\text{HI}}{<} \frac{3^{n+1}}{(n+1)!} + 6n - 5 \overset{\text{Aux}}{<} 6 + 6n - 5 = 6(n+1) - 5,\ n \geq 5 \\
+    &\sum_{i=1}^{n+1}\frac{3^i}{i!} < 6(n+1) - 5, \ n \geq 5\\
+    &\implies P(n+1):V, \ n \geq 5
+  \end{align*}
+  Hemos probado el caso base y el paso inductivo, este último para los $n \geq 5$. Como solo probamos el
+  paso inductivo para $n \geq 5$, deberiamos ver que $P(4)$ y $P(5)$ son verdaderas.
+  \begin{align*}
+    P(4): \sum_{i=1}^{4}\frac{3^i}{i!} < 6 \cdot 4 - 5 \implies P(4): 15.75 < 19 \implies P(4):V \\
+    P(5): \sum_{i=1}^{5}\frac{3^i}{i!} < 6 \cdot 5 - 5 \implies P(4): 17.4 < 25 \implies P(5):V
+  \end{align*}
+  Tenemos
+  \begin{align*}
+  &P(3):V \land P(4):V \land P(5):V \\
+  &\forall n \geq 5, P(n):V \implies P(n+1):V
+  \end{align*}
+  Entonces $P(n):V, \ \forall n \geq 3$.
+
+  \paragraph{Auxiliar}{Por el punto (i), si $n \geq 5$ tenemos que $3^{n-1} \leq n! \implies 3^{n} \leq 
+  (n+1)! \overset{\text{*}}{\implies} \\
+  \overset{\text{*}}{\implies} \displaystyle \frac{3^n}{(n+1)!} \leq 1 \implies 3\frac{3^n}{(n+1)!} \leq 3 \implies
+  \frac{3^{n+1}}{(n+1)!} \leq 3 \overset{(3 < 6)}{\implies} \frac{3^{n+1}}{(n+1)!} < 6 $\\
+  Llegamos a que $\displaystyle \frac{3^{n+1}}{(n+1)!} < 6, \text{ si } n \geq 5$.}
+\end{enumerate}
+
