--- a/2-guia/ejercicios-2/ej-16-2.tex
+++ b/2-guia/ejercicios-2/ej-16-2.tex
@@ -1,4 +1,162 @@
 \begin{enunciado}{\ejercicio}
-Hallar la fórmula para el término general de las sucesiones $(a_n)_{n \en \naturales}$
+    Hallar una fórmula para el término general de las sucesiones $(a_n)_{n \in \mathbb{N}}$ definidas recursivamente a 
+    continuación y probar su validez.
+    \begin{multicols}{2}
+        \begin{enumerate}[label=\roman*)]
+            \item $a_1 = 1 \text{ y } a_{n+1} = (1 +\sqrt{a_n})^2,\ \forall n \in \mathbb{N}$
+            \item $a_1 = 3 \text{ y } a_{n+1} = 2a_n + 3^n,\ \forall n \in \mathbb{N}$
+            \item $a_1 = 1 \text{ y } a_{n+1} = na_n,\ \forall n \in \mathbb{N}$
+            \item $a_1 = 2 \text{ y } a_{n+1} = 2 - \displaystyle \frac{1}{a_n},\ \forall n \in \mathbb{N}$
+        \end{enumerate}
+\end{multicols}
 \end{enunciado}
-\hacer
+
+\begin{enumerate}[label=\roman*)]
+    \item Sea $(a_n)_{n \in \mathbb{N}}$ definida por
+    \setcounter{equation}{0}
+    \begin{align}
+        a_1 &= 1 \\
+        a_{n+1} &= (1 + \sqrt{a_n})^2,\ \forall n \in \mathbb{N}
+    \end{align}
+    Veamos si hay algún patrón entre los términos de la sucesión para poder conjeturar una formula para su termino 
+    n-ésimo
+    \begin{align}
+        a_2 &= (1 +\sqrt{a_1})^2 = (1 + \sqrt{1})^2 = 4 = 2^2 \nonumber \\
+        a_3 &= (1 +\sqrt{a_2})^2 = (1 + \sqrt{4})^2 = 9 = 3^2 \nonumber \\
+        a_4 &= (1 +\sqrt{a_3})^2 = (1 + \sqrt{9})^2 = 16 = 4^2 \nonumber \\
+        &\vdotswithin{=} \nonumber \\
+        a_n &= n^2
+    \end{align}
+    Tenemos que probar que la sucesión dada por recurrencia satisface la sucesión que conjeturamos en la Ec.(3). 
+    Hagamoslo por inducción
+    \begin{align*}
+        P(n): a_n = n^2, \ n \in \mathbb{N}   
+    \end{align*}
+    \underline{Caso Base}, $n = 1$:
+	    \begin{align*}
+		    &P(1): a_1 = 1^2 = 1 \overset{(1)}{=} 1 \implies P(1):V
+	    \end{align*}
+	\underline{Paso inductivo.} Sea $n \geq 1$:
+	\begin{enumerate}
+        \item[HI.] $P(n): V$
+        \item[TI.] $P(n+1): a_{n+1} = (n+1)^2$
+    \end{enumerate}
+ 	Desarrollemos el lado izquierdo de la igualdad en la TI
+    \begin{align*}
+  	    a_{n+1} \overset{(2)}{=} (1 + \sqrt{a_n})^2 \overset{\text{HI}}{=} (1 + \sqrt{n^2})^2 = (1 + n)^2 
+        \implies P(n+1):V
+    \end{align*}
+    Hemos probado el caso base y el paso inductivo. Concluimos que $P(n):V,$ $\forall n \in \mathbb{N}$.
+
+    \item Sea $(a_n)_{n \in \mathbb{N}}$ definida por
+    \setcounter{equation}{0}
+    \begin{align}
+        a_1 &= 3 \\
+        a_{n+1} &= 2 a_n + 3^n,\ \forall n \in \mathbb{N}
+    \end{align}
+    Veamos si hay algún patrón entre los términos de la sucesión para poder conjeturar una formula para su termino 
+    n-ésimo
+    \begin{align*}
+        a_2 &= 2 a_1 + 3^1 = 2 \cdot 3 + 3 = 9 = 3^2 \\
+        a_3 &= 2 a_2 + 3^2 = 2 \cdot 9 + 3^2 = 9  = 27 = 3^3\\
+        a_4 &= 2 a_3 + 3^2 = 2 \cdot 27 + 3^3  = 81 = 3^4\\
+        &\vdotswithin{=} \\
+        a_n &= 3^n
+    \end{align*}
+    Tenemos que probar que la sucesión dada por recurrencia satisface la sucesión que conjeturamos en la Ec.(3). 
+    Hagamoslo por inducción
+    \begin{align*}
+        P(n): a_n = 3^n, \ n \in \mathbb{N}
+    \end{align*}
+    
+    \underline{Caso Base}, $n = 1$:
+	    \begin{align*}
+		    &P(1): a_1 = 3^1 = 3 \overset{(1)}{=} 3 \implies P(1):V
+	    \end{align*}
+	\underline{Paso inductivo.} Sea $n \geq 1$:
+	\begin{enumerate}
+        \item[HI.] $P(n): V$
+        \item[TI.] $P(n+1): a_{n+1} = 3^{n+1}$
+    \end{enumerate}
+ 	Desarrollemos el lado izquierdo de la igualdad en la TI
+    \begin{align*}
+  	    a_{n+1} \overset{(2)}{=} 2 a_n + 3^n \overset{\text{HI}}{=} 2 \cdot 3^n + 3^n = 3 \cdot 3^n = 3^{n+1} 
+        \implies P(n+1):V
+    \end{align*}
+    Hemos probado el caso base y el paso inductivo. Concluimos que $P(n):V,$ $\forall n \in \mathbb{N}$.
+
+    \item Sea $(a_n)_{n \in \mathbb{N}}$ definida por
+    \setcounter{equation}{0}
+    \begin{align}
+        a_1 &= 3 \\
+        a_{n+1} &= n a_n,\ \forall n \in \mathbb{N}
+    \end{align}
+    Veamos si hay algún patrón entre los términos de la sucesión para poder conjeturar una formula de su termino 
+    n-ésimo
+    \begin{align}
+        a_2 &= 1 \cdot a_1 = 1 \cdot 1 \nonumber \\
+        a_3 &= 2 \cdot a_2 = 2 \cdot 1 \nonumber \\
+        a_4 &= 3 \cdot a_3 = 3 \cdot 2 = 3 \cdot 2 \cdot 1 \nonumber  \\
+        a_5 &= 4 \cdot a_4 = 4 \cdot 6 = 4 \cdot 3 \cdot 2 \nonumber \cdot 1 \\
+            &\vdotswithin{=} \nonumber \\
+        a_n &= (n-1)!
+    \end{align}
+    Tenemos que probar que la sucesión dada por recurrencia satisface la sucesión que conjeturamos en la Ec.(3). 
+    Hagamoslo por inducción
+    \begin{align*}
+        P(n): a_n = 3^n,\ \forall n \in \mathbb{N}
+    \end{align*}
+    \underline{Caso Base}, $n = 1$:
+	    \begin{align*}
+		    &P(1): a_1 = 3^1 = 3 \overset{(1)}{=} 3 \implies P(1):V
+	    \end{align*}
+	\underline{Paso inductivo.} Sea $n \geq 1$:
+	\begin{enumerate}
+        \item[HI.] $P(n): V$
+        \item[TI.] $P(n+1): a_{n+1} = 3^{n+1}$
+    \end{enumerate}
+ 	Desarrollemos el lado izquierdo de la igualdad en la TI
+    \begin{align*}
+  	    a_{n+1} \overset{(2)}{=} 2 a_n + 3^n \overset{\text{HI}}{=} 2 \cdot 3^n + 3^n = 3 \cdot 3^n = 3^{n+1} 
+        \implies P(n+1):V
+    \end{align*}
+    Hemos probado el caso base y el paso inductivo. Concluimos que $P(n):V,$ $\forall n \in \mathbb{N}$.
+
+    \item Sea $(a_n)_{n \in \mathbb{N}}$ definida por
+    \setcounter{equation}{0}
+    \begin{align}
+        a_1 &= 2 \\
+        a_{n+1} &= 2 - \frac{1}{a_n},\ \forall n \in \mathbb{N}
+    \end{align}
+    Veamos si hay algún patrón entre los términos de la sucesión para poder conjeturar una formula de su termino 
+    n-ésimo
+    \begin{align}
+        a_2 &= 2 - \frac{1}{a_1} = 2 - \frac{1}{2} = \frac{3}{2} \nonumber \\
+        a_3 &= 2 - \frac{1}{a_2} = 2 - \frac{1}{3/2} = \frac{4}{3} \nonumber \\
+        a_4 &= 2 - \frac{1}{a_3} = 2 - \frac{1}{4/3} = \frac{5}{4} \nonumber  \\
+        a_5 &= 2 - \frac{1}{a_4} = 2 - \frac{1}{5/4} = \frac{6}{5} \nonumber \\
+        &\vdotswithin{=} \nonumber \\
+        a_n &= \frac{n+1}{n}
+    \end{align}
+    Tenemos que probar que la sucesión dada por recurrencia satisface la sucesión que conjeturamos en la Ec.(3). 
+    Hagamoslo por inducción
+    \begin{align*}
+        P(n): a_n = \frac{n+1}{n},\ \forall n \in \mathbb{N}
+    \end{align*}
+    \underline{Caso Base}, $n = 1$:
+	    \begin{align*}
+		    &P(1): a_1 = \frac{1+1}{1} = 2 \overset{(1)}{=} 2 \implies P(1):V
+	    \end{align*}
+	\underline{Paso inductivo}. Sea $n \geq 1$:
+	\begin{enumerate}
+        \item[HI.] $P(n): V$
+        \item[TI.] $P(n+1): a_{n+1} = \displaystyle \frac{n+2}{n+1}$
+    \end{enumerate}
+ 	Desarrollemos el lado izquierdo de la igualdad en la TI
+    \begin{align*}
+  	    a_{n+1} \overset{(2)}{=} 2 - \frac{1}{a_n} \overset{\text{HI}}{=} 2 - \frac{1}{(n+1)/n} = 2 - \frac{n}{n+1} =
+        \frac{2(n+1) - n}{n+1} = \frac{n+2}{n+1} 
+        \implies P(n+1):V
+    \end{align*}
+    Hemos probado el caso base y el paso inductivo. Concluimos que $P(n):V,$ $\forall n \in \mathbb{N}$.
+\end{enumerate}
