modifico formato en 16-2 agrego aportes en ejercicios de 16-2

--- a/2-guia/ejercicios-2/ej-12-2.tex
+++ b/2-guia/ejercicios-2/ej-12-2.tex
@@ -93,3 +93,10 @@
             \frac{3^{n+1}}{(n+1)!} \leq 3 \Entonces{$(3 < 6)$} \frac{3^{n+1}}{(n+1)!} < 6 $\\
           Llegamos a que $ \frac{3^{n+1}}{(n+1)!} < 6, \text{ si } n \geq 5$.}
 \end{enumerate}
+
+% Contribuciones
+\begin{aportes}
+  %% iconos : \github, \enstagram, \tiktok, \linkedin
+  %\aporte{url}{nombre icono}
+  \item \aporte{https://github.com/koopardo/}{Marcos Zea \github}
+\end{aportes}
