--- a/2-guia/ejercicios-2/ej-15-2.tex
+++ b/2-guia/ejercicios-2/ej-15-2.tex
@@ -101,3 +101,12 @@
         Como $p(1), p(k) \ytext p(k+1)$ son verdaderas, por el principio de inducción también lo es
         $p(n) \paratodo n \en \naturales$
 \end{enumerate}
+
+
+% Contribuciones
+\begin{aportes}
+  %% iconos : \github, \enstagram, \tiktok, \linkedin
+  %\aporte{url}{nombre icono}
+  \item \aporte{\dirRepo}{Nad Garraz \github}
+\end{aportes}
+
