--- a/macros/preamble-general.tex
+++ b/macros/preamble-general.tex
@@ -30,6 +30,7 @@
 \usepackage{venndiagram} % Para los diagramas de Venn
 \usepackage{qrcode} % genera código qr
 \usepackage{xspace}% para control de espacios en macros
+\usepackage{aligned-overset}% para alinear simbolos con anotaciones sobre/abajo de ellos
 %\usepackage{listings} % Escribir código
 
 %\usepackage{algorithm}
