--- a/2-guia/ejercicios-2/ej-17-2.tex
+++ b/2-guia/ejercicios-2/ej-17-2.tex
@@ -1,36 +1,36 @@
 \begin{enunciado}{\ejercicio}
     \begin{enumerate}[label=\roman*)]
-        \item Sea $(a_n)_{n \in \mathbb{N}}$ la sucesión definida por
+        \item Sea $(a_n)_{n \en \naturales }$ la sucesión definida por
         \begin{align*}
-            a = 1 \text{ y } a_{n+1} = a_n + n \cdot n!,\ \forall n \in \mathbb{N}
+            a = 1  \ytext  a_{n+1} = a_n + n \cdot n!,\ \paratodo n \en \naturales 
         \end{align*}
-        Probar que $a_n = n!$, y, aplicando el Ej.9i), calcular $\displaystyle \sum_{i=1}^{n}i \cdot i!$.
+        Probar que $a_n = n!$, y, aplicando el Ej.9i), calcular $\displaystyle \sumatoria{i=1}{n} i \cdot i!$.
         
-        \item Sea $(a_n)_{n \in \mathbb{N}}$ la sucesión definida por
+        \item Sea $(a_n)_{n \en \naturales }$ la sucesión definida por
         \begin{align*}
-            a = 1 \text{ y } a_{n+1} = a_n + 3n^2 + 3n + 1,\ \forall n \in \mathbb{N}
+            a = 1  \ytext  a_{n+1} = a_n + 3n^2 + 3n + 1,\ \paratodo n \en \naturales 
         \end{align*}
-        Probar que $a_n = n^3$, y, aplicando el Ej.9i, calcular de otra forma $\displaystyle \sum_{i=1}^{n}i^2$ 
+        Probar que $a_n = n^3$, y, aplicando el Ej.9i, calcular de otra forma $\displaystyle \sumatoria{i=1}{n} i^2$ 
         (comparar con Ej.6).
     \end{enumerate}
 \end{enunciado}
 
 \begin{enumerate}[label=\roman*)]
-    \item Sea $(a_n)_{n \in \mathbb{N}}$ definida por
+    \item Sea $(a_n)_{n \en \naturales }$ definida por
     \setcounter{equation}{0}
     \begin{align}
         a_1 &= 1 \\
-        a_{n+1} &= a_n + n \cdot n!,\ \forall n \in \mathbb{N}
+        a_{n+1} &= a_n + n \cdot n!,\ \paratodo n \en \naturales 
     \end{align} 
-    Tenemos que probar que la sucesión dada por recurrencia satisface la sucesión $a_n = n!$ para todo $n \in 
-    \mathbb{N}$. 
+    Tenemos que probar que la sucesión dada por recurrencia satisface la sucesión $a_n = n!$ para todo $n \en 
+    \naturales $. 
     Hagamoslo por inducción
     \begin{align*}
-        P(n): a_n = n!,\ \forall n \in \mathbb{N}
+        P(n): a_n = n!,\ \paratodo n \en \naturales 
     \end{align*}
     \underline{Caso Base}, $n = 1$:
 	    \begin{align*}
-		    &P(1): a_1 = 1! = 1 \overset{(1)}{=} 1 \implies P(1):V
+		    &P(1): a_1 = 1! = 1 \igual{(1)} 1 \entonces P(1):V
 	    \end{align*}
 	\underline{Paso inductivo.} Sea $n \geq 1$:
 	\begin{enumerate}
@@ -39,45 +39,45 @@
     \end{enumerate}
  	Desarrollemos el lado izquierdo de la igualdad en la TI
     \begin{align*}
-  	    a_{n+1} \overset{(2)}{=} a_n + n \cdot n! \overset{\text{HI}}{=} n! + n \cdot n! = n!(n + 1) = (n+1)! 
-        \implies P(n+1):V
+  	    a_{n+1} \igual{(2)} a_n + n \cdot n! \igual{HI} n! + n \cdot n! = n!(n + 1) = (n+1)! 
+        \entonces P(n+1):V
     \end{align*}
-    Hemos probado el caso base y el paso inductivo. Concluimos que $P(n):V,$ $\forall n \in \mathbb{N}$.\\
+    Hemos probado el caso base y el paso inductivo. Concluimos que $P(n):V,$ $\paratodo n \en \naturales $.\\
 
-    Calculemos $\displaystyle \sum_{i=1}^{n}i \cdot i! $:
+    Calculemos $\displaystyle \sumatoria{i=1}{n} i \cdot i! $:
     \begin{align*}
-        \sum_{i=1}^{n} i \cdot i! \overset{\text{(Aux.1)}}{=} \sum_{i=1}^{n} (a_{i+1} - a_i) \overset{\text{(Aux.2)}}{=}
+            \sumatoria{i=1}{n}  i \cdot i! \taa{\text{Aux}}{1}= \sumatoria{i=1}{n}  (a_{i+1} - a_i) \taa{\text{Aux}}{2}=
         a_{n+1} - a_1 = (n+1)! - 1
     \end{align*}
 
     \paragraph{Auxiliar 1}{
         Usemos la Ec.(2)
         \begin{align*}
-            a_{n+1} = a_n + n \cdot n! \implies n \cdot n! = a_{n+1} - a_n
+            a_{n+1} = a_n + n \cdot n! \entonces n \cdot n! = a_{n+1} - a_n
         \end{align*}
     }
     \paragraph{Auxiliar 2}{
         Ecuación dada por el ejercicio 19.i)
         \begin{align*}
-            \sum_{i=1}^{n}(a_{i+1} - a_1) = a_{n+1} - a_1
+            \sumatoria{i=1}{n} (a_{i+1} - a_1) = a_{n+1} - a_1
         \end{align*}
     }
 
-    \item Sea $(a_n)_{n \in \mathbb{N}}$ definida por
+    \item Sea $(a_n)_{n \en \naturales }$ definida por
     \setcounter{equation}{0}
     \begin{align}
         a_1 &= 1 \\
-        a_{n+1} &= a_n + 3n^2 + 3n + 1,\ \forall n \in \mathbb{N}
+        a_{n+1} &= a_n + 3n^2 + 3n + 1,\ \paratodo n \en \naturales 
     \end{align} 
-    Tenemos que probar que la sucesión dada por recurrencia satisface la sucesión $a_n = n^3$ para todo $n \in 
-    \mathbb{N}$. 
+    Tenemos que probar que la sucesión dada por recurrencia satisface la sucesión $a_n = n^3$ para todo $n \en 
+    \naturales $. 
     Hagamoslo por inducción
     \begin{align*}
-        P(n): a_n = n^3,\ \forall n \in \mathbb{N}
+        P(n): a_n = n^3,\ \paratodo n \en \naturales 
     \end{align*}
     \underline{Caso Base}, $n = 1$:
 	    \begin{align*}
-		    &P(1): a_1 = 1! = 1 \overset{(1)}{=} 1 \implies P(1):V
+		    &P(1): a_1 = 1! = 1 \igual{(1)} 1 \entonces P(1):V
 	    \end{align*}
 	\underline{Paso inductivo.} Sea $n \geq 1$:
 	\begin{enumerate}
@@ -86,19 +86,20 @@
     \end{enumerate}
  	Desarrollemos el lado izquierdo de la igualdad en la TI
     \begin{align*}
-  	    a_{n+1} \overset{(2)}{=} a_n + 3n^2 + 3n + 1 \overset{\text{HI}}{=} n^3 + 3n^2 + 3n + 1 = (n+1)^3 
-        \implies P(n+1):V
+            a_{n+1} \igual{(2)} a_n + 3n^2 + 3n + 1 \igual{HI} n^3 + 3n^2 + 3n + 1 = (n+1)^3 
+        \entonces P(n+1):V
     \end{align*}
-    Hemos probado el caso base y el paso inductivo. Concluimos que $P(n):V,$ $\forall n \in \mathbb{N}$. \\
+    Hemos probado el caso base y el paso inductivo. Concluimos que $P(n):V,$ $\paratodo n \en \naturales $. \\
 
-    Calculemos $\displaystyle \sum_{i=1}^{n}i^2 $:
+    Calculemos $\displaystyle \sumatoria{i=1}{n} i^2 $:
+
     \begin{align*}
-        \sum_{i=1}^{n} i^2 \overset{\text{(Aux.1)}}&{=} \sum_{i=1}^{n} \frac{a_{i+1} - a_i - 3i - 1}{3} =
-        \frac{1}{3}\sum_{i=1}^{n} (a_{i+1} - a_i - 3i - 1) \\
-        &= \frac{1}{3} \left( \sum_{i=1}^{n} (a_{i+1} - a_i) - \sum_{i=1}^{n} 3i - \sum_{i=1}^{n}1 \right)
-        = \frac{1}{3} \left( \sum_{i=1}^{n} (a_{i+1} - a_i) - 3\sum_{i=1}^{n} i - \sum_{i=1}^{n}1 \right) \\
-        &= \frac{1}{3} \left( \sum_{i=1}^{n} (a_{i+1} - a_i) - 3\frac{n(n+1)}{2} - n \right) 
-        = \frac{1}{3}\sum_{i=1}^{n} (a_{i+1} - a_i) + \frac{1}{3} \left(- 3\frac{n(n+1)}{2} - n \right) \\
+        \sumatoria{i=1}{n}  i^2 \overset{\text{(Aux.1)}}&{=} \sumatoria{i=1}{n}  \frac{a_{i+1} - a_i - 3i - 1}{3} =
+        \frac{1}{3}\sumatoria{i=1}{n}  (a_{i+1} - a_i - 3i - 1) \\
+        &= \frac{1}{3} \left( \sumatoria{i=1}{n}  (a_{i+1} - a_i) - \sumatoria{i=1}{n}  3i - \sumatoria{i=1}{n} 1 \right)
+        = \frac{1}{3} \left( \sumatoria{i=1}{n}  (a_{i+1} - a_i) - 3\sumatoria{i=1}{n}  i - \sumatoria{i=1}{n} 1 \right) \\
+        &= \frac{1}{3} \left( \sumatoria{i=1}{n}  (a_{i+1} - a_i) - 3\frac{n(n+1)}{2} - n \right) 
+        = \frac{1}{3}\sumatoria{i=1}{n}  (a_{i+1} - a_i) + \frac{1}{3} \left(- 3\frac{n(n+1)}{2} - n \right) \\
         \overset{\text{(Aux.2)}}&{=} \frac{1}{3}(a_{n+1} - a_1) + \left(-\frac{n(n+1)}{2} - \frac{n}{3} \right)
         = \frac{1}{3}((n+1)^3 - 1) + \left(-\frac{n(n+1)}{2} - \frac{n}{3} \right) \\
         &=  \frac{(n+1)^3}{3} - \frac{1}{3} -\frac{n(n+1)}{2} - \frac{n}{3} = 
@@ -107,7 +108,7 @@
         = (n+1) \left( \frac{n^2 + 2n + 1}{3} -\frac{n}{2} - \frac{1}{3} \right) \\
         &= (n+1) \left( \frac{2n^2 + 4n + 2 - 3n - 2}{6} \right) = (n+1) \left( \frac{2n^2 + n}{6} \right)
         = \frac{n(n+1)(2n+1)}{6} \\
-        \sum_{i=1}^{n} i^2 &= \frac{n(n+1)(2n+1)}{6}
+        \sumatoria{i=1}{n}  i^2 &= \frac{n(n+1)(2n+1)}{6}
     \end{align*}
 
     \paragraph{Auxiliar 1}{
@@ -121,8 +122,14 @@
     \paragraph{Auxiliar 2}{
         Ecuación dada por el ejercicio 19.i)
         \begin{align*}
-            \sum_{i=1}^{n}(a_{i+1} - a_1) = a_{n+1} - a_1
+            \sumatoria{i=1}{n} (a_{i+1} - a_1) = a_{n+1} - a_1
         \end{align*}
     }
 \end{enumerate}
 
+% Contribuciones
+\begin{aportes}
+  %% iconos : \github, \enstagram, \tiktok, \linkedin
+  %\aporte{url}{nombre icono}
+  \item \aporte{https://github.com/koopardo/}{Marcos Zea \github}
+\end{aportes}
