Agrego aportes en ej-37-4 y ej-38-4

--- a/4-guia/ejercicios-4/ej-37-4.tex
+++ b/4-guia/ejercicios-4/ej-37-4.tex
@@ -135,4 +135,9 @@
     Luego, como $d'=1$, tenemos que $\boxed{d=5^k, \text{para cada $k \en \naturales$}}$
 
 
+    \begin{aportes}
+        \item \aporte{https://github.com/Nunezca}{Nunezca \github}
+    \end{aportes}
+
+
 
