--- a/4-guia/ejercicios-4/ej-38-4.tex
+++ b/4-guia/ejercicios-4/ej-38-4.tex
@@ -218,6 +218,10 @@
     
         \end{enumerate}
 
+        \begin{aportes}
+          \item \aporte{https://github.com/Nunezca}{Nunezca \github}
+      \end{aportes}
+
            
 
 
